Fix modal overflow scroll issue

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -28,7 +28,7 @@ a:hover {
 }
 
 body {
-	margin: 0;  
+  margin: 0;  
 }
 
 /* MODAL FORM */
@@ -47,25 +47,28 @@ body {
 .modal-background {
   position: fixed;
   top: 0;
-  z-index: 100;
-  display: flex;
+  z-index: 101;
+  display: flex; 
+  overflow-y: scroll;
   height: 100%;
   width: 100%;
   background-color: rgba(0,0,0,.75);
-  align-items: center;
-  justify-content: center;
-  overflow: auto;  
   transition: .4s;
+}
+
+.blur {  
+  -webkit-filter: blur(5px);
+          filter: blur(5px);
 }
 
 .modal {  
   position: relative;
   top: 0;
-  margin-left: auto;
-  margin-right: auto;
+  margin: auto;
   padding: 15px;
   width: 100%;
   max-width: 500px;
+  max-height: 500px;
   transition: .4s;
 }
 
